# qt5integration

./: CMakeLists.txt
iconengineplugins/: CMakeLists.txt
iconengineplugins/builtinengine/: CMakeLists.txt
iconengineplugins/svgiconengine/: CMakeLists.txt
iconengineplugins/xdgiconproxyengine/: CMakeLists.txt
imageformatplugins/: CMakeLists.txt
imageformatplugins/svg/: CMakeLists.txt
platformthemeplugin/: CMakeLists.txt
platformthemeplugin/config.tests/dthemed_icon_lookup/: CMakeLists.txt
src/: CMakeLists.txt
src/iconengines/: CMakeLists.txt
src/iconengines/builtinenginechooser/: CMakeLists.txt
src/iconengines/svgiconenginechooser/: CMakeLists.txt
src/iconengines/xdgiconproxyenginechooser/: CMakeLists.txt
src/imageformats/: CMakeLists.txt
src/imageformats/svgchooser/: CMakeLists.txt
src/platformthemes/: CMakeLists.txt
src/platformthemes/platformthemechooser/: CMakeLists.txt
src/styles/: CMakeLists.txt
src/styles/stylechooser/: CMakeLists.txt
styleplugins/: CMakeLists.txt
styleplugins/chameleon/: CMakeLists.txt
styleplugins/dstyleplugin/: CMakeLists.txt
styleplugins/dstyleplugin/config.tests/dtkwidget/: CMakeLists.txt
styles/: CMakeLists.txt
tests/: CMakeLists.txt
