qt_add_plugin(dstyleplugin
    checkboxhelper.cpp
    colorutils.cpp colorutils.h
    comboboxhelper.cpp
    common.h
    commonhelper.cpp commonhelper.h
    dstyleanimation.cpp dstyleanimation.h
    dstyleplugin.cpp dstyleplugin.h
    framehelper.cpp
    geometryutils.cpp geometryutils.h
    headerviewhelper.cpp
    hidpihelper.cpp hidpihelper.h
    lineedithelper.cpp
    menuhelper.cpp
    painterhelper.cpp painterhelper.h
    paletteextended.cpp paletteextended.h
    progressbarhelper.cpp
    pushbuttonhelper.cpp
    rubberbandhelper.cpp
    scrollbarhelper.cpp
    sliderhelper.cpp
    spinboxhelper.cpp
    style.cpp style.h
    tabbarhelper.cpp
    tabwidgethelper.cpp
    toolbuttonhelper.cpp
)
target_link_libraries(dstyleplugin PRIVATE
    Qt::Core
    Qt::CorePrivate
    Qt::Gui
    Qt::GuiPrivate
    Qt::Widgets
    Qt::WidgetsPrivate
)


# Resources:
set(brushchemes_resource_files
    "brushschemes/ddark.css"
    "brushschemes/dlight.css"
    "brushschemes/dsemidark.css"
    "brushschemes/dsemilight.css"
)

qt_add_resources(dstyleplugin "brushchemes"
    PREFIX
        "/"
    FILES
        ${brushchemes_resource_files}
)
set(assets_light_resource_files
    "assets/light/arrow-right_disabled.svg"
    "assets/light/arrow-right_normal.svg"
    "assets/light/arrow-right_selected.svg"
    "assets/light/check_disabled.svg"
    "assets/light/check_normal.svg"
    "assets/light/check_selected.svg"
    "assets/light/checkbox/checkbox_checked.png"
    "assets/light/checkbox/checkbox_checked@2x.png"
    "assets/light/checkbox/checkbox_checked_focus.png"
    "assets/light/checkbox/checkbox_checked_focus@2x.png"
    "assets/light/checkbox/checkbox_checked_hover.png"
    "assets/light/checkbox/checkbox_checked_hover@2x.png"
    "assets/light/checkbox/checkbox_checked_insensitive.png"
    "assets/light/checkbox/checkbox_checked_insensitive@2x.png"
    "assets/light/checkbox/checkbox_checked_press.png"
    "assets/light/checkbox/checkbox_checked_press@2x.png"
    "assets/light/checkbox/checkbox_mixed.png"
    "assets/light/checkbox/checkbox_mixed@2x.png"
    "assets/light/checkbox/checkbox_mixed_focus.png"
    "assets/light/checkbox/checkbox_mixed_focus@2x.png"
    "assets/light/checkbox/checkbox_mixed_hover.png"
    "assets/light/checkbox/checkbox_mixed_hover@2x.png"
    "assets/light/checkbox/checkbox_mixed_insensitive.png"
    "assets/light/checkbox/checkbox_mixed_insensitive@2x.png"
    "assets/light/checkbox/checkbox_mixed_press.png"
    "assets/light/checkbox/checkbox_mixed_press@2x.png"
    "assets/light/checkbox/checkbox_unchecked.png"
    "assets/light/checkbox/checkbox_unchecked@2x.png"
    "assets/light/checkbox/checkbox_unchecked_focus.png"
    "assets/light/checkbox/checkbox_unchecked_focus@2x.png"
    "assets/light/checkbox/checkbox_unchecked_hover.png"
    "assets/light/checkbox/checkbox_unchecked_hover@2x.png"
    "assets/light/checkbox/checkbox_unchecked_insensitive.png"
    "assets/light/checkbox/checkbox_unchecked_insensitive@2x.png"
    "assets/light/checkbox/checkbox_unchecked_press.png"
    "assets/light/checkbox/checkbox_unchecked_press@2x.png"
    "assets/light/checkbox/radio_checked.png"
    "assets/light/checkbox/radio_checked@2x.png"
    "assets/light/checkbox/radio_checked_focus.png"
    "assets/light/checkbox/radio_checked_focus@2x.png"
    "assets/light/checkbox/radio_checked_hover.png"
    "assets/light/checkbox/radio_checked_hover@2x.png"
    "assets/light/checkbox/radio_checked_insensitive.png"
    "assets/light/checkbox/radio_checked_insensitive@2x.png"
    "assets/light/checkbox/radio_checked_press.png"
    "assets/light/checkbox/radio_checked_press@2x.png"
    "assets/light/checkbox/radio_mixed.png"
    "assets/light/checkbox/radio_mixed@2x.png"
    "assets/light/checkbox/radio_mixed_focus.png"
    "assets/light/checkbox/radio_mixed_focus@2x.png"
    "assets/light/checkbox/radio_mixed_hover.png"
    "assets/light/checkbox/radio_mixed_hover@2x.png"
    "assets/light/checkbox/radio_mixed_insensitive.png"
    "assets/light/checkbox/radio_mixed_insensitive@2x.png"
    "assets/light/checkbox/radio_mixed_press.png"
    "assets/light/checkbox/radio_mixed_press@2x.png"
    "assets/light/checkbox/radio_unchecked.png"
    "assets/light/checkbox/radio_unchecked@2x.png"
    "assets/light/checkbox/radio_unchecked_focus.png"
    "assets/light/checkbox/radio_unchecked_focus@2x.png"
    "assets/light/checkbox/radio_unchecked_hover.png"
    "assets/light/checkbox/radio_unchecked_hover@2x.png"
    "assets/light/checkbox/radio_unchecked_insensitive.png"
    "assets/light/checkbox/radio_unchecked_insensitive@2x.png"
    "assets/light/checkbox/radio_unchecked_press.png"
    "assets/light/checkbox/radio_unchecked_press@2x.png"
    "assets/light/header_arrow_down.png"
    "assets/light/header_arrow_up.png"
    "assets/light/input/input_clear_hover.svg"
    "assets/light/input/input_clear_normal.svg"
    "assets/light/input/input_clear_press.svg"
    "assets/light/slider/slider_handle_focus.svg"
    "assets/light/slider/slider_handle_insensitive.svg"
    "assets/light/slider/slider_handle_normal.svg"
    "assets/light/slider/slider_handle_press.svg"
    "assets/light/slider/slider_point_handle.png"
    "assets/light/slider/slider_point_handle@2x.png"
    "assets/light/slider/slider_point_handle_focus.png"
    "assets/light/slider/slider_point_handle_focus@2x.png"
    "assets/light/slider/slider_point_handle_insensitive.png"
    "assets/light/slider/slider_point_handle_insensitive@2x.png"
    "assets/light/slider/slider_point_handle_press.png"
    "assets/light/slider/slider_point_handle_press@2x.png"
    "assets/light/spinbox/spinbutton_down_hover.png"
    "assets/light/spinbox/spinbutton_down_insensitive.png"
    "assets/light/spinbox/spinbutton_down_normal.png"
    "assets/light/spinbox/spinbutton_down_press.png"
    "assets/light/spinbox/spinbutton_minus_hover.png"
    "assets/light/spinbox/spinbutton_minus_insensitive.png"
    "assets/light/spinbox/spinbutton_minus_normal.png"
    "assets/light/spinbox/spinbutton_minus_press.png"
    "assets/light/spinbox/spinbutton_plus_hover.png"
    "assets/light/spinbox/spinbutton_plus_insensitive.png"
    "assets/light/spinbox/spinbutton_plus_normal.png"
    "assets/light/spinbox/spinbutton_plus_press.png"
    "assets/light/spinbox/spinbutton_up_hover.png"
    "assets/light/spinbox/spinbutton_up_insensitive.png"
    "assets/light/spinbox/spinbutton_up_normal.png"
    "assets/light/spinbox/spinbutton_up_press.png"
    "assets/light/tabbar/add_hover.svg"
    "assets/light/tabbar/add_normal.svg"
    "assets/light/tabbar/add_press.svg"
    "assets/light/tabbar/pagedown_hover.svg"
    "assets/light/tabbar/pagedown_insensitive.svg"
    "assets/light/tabbar/pagedown_normal.svg"
    "assets/light/tabbar/pagedown_press.svg"
    "assets/light/tabbar/pageup_hover.svg"
    "assets/light/tabbar/pageup_insensitive.svg"
    "assets/light/tabbar/pageup_normal.svg"
    "assets/light/tabbar/pageup_press.svg"
    "assets/light/tabbar/tab_close_hover.svg"
    "assets/light/tabbar/tab_close_normal.svg"
    "assets/light/tabbar/tab_close_press.svg"
)

qt_add_resources(dstyleplugin "assets_light"
    PREFIX
        "/"
    FILES
        ${assets_light_resource_files}
)
set(assets_dark_resource_files
    "assets/dark/check_disabled.png"
    "assets/dark/check_normal.png"
    "assets/dark/check_selected.png"
    "assets/dark/checkbox/checkbox_checked.png"
    "assets/dark/checkbox/checkbox_checked@2x.png"
    "assets/dark/checkbox/checkbox_checked_focus.png"
    "assets/dark/checkbox/checkbox_checked_focus@2x.png"
    "assets/dark/checkbox/checkbox_checked_hover.png"
    "assets/dark/checkbox/checkbox_checked_hover@2x.png"
    "assets/dark/checkbox/checkbox_checked_insensitive.png"
    "assets/dark/checkbox/checkbox_checked_insensitive@2x.png"
    "assets/dark/checkbox/checkbox_checked_press.png"
    "assets/dark/checkbox/checkbox_checked_press@2x.png"
    "assets/dark/checkbox/checkbox_mixed.png"
    "assets/dark/checkbox/checkbox_mixed@2x.png"
    "assets/dark/checkbox/checkbox_mixed_focus.png"
    "assets/dark/checkbox/checkbox_mixed_focus@2x.png"
    "assets/dark/checkbox/checkbox_mixed_hover.png"
    "assets/dark/checkbox/checkbox_mixed_hover@2x.png"
    "assets/dark/checkbox/checkbox_mixed_insensitive.png"
    "assets/dark/checkbox/checkbox_mixed_insensitive@2x.png"
    "assets/dark/checkbox/checkbox_mixed_press.png"
    "assets/dark/checkbox/checkbox_mixed_press@2x.png"
    "assets/dark/checkbox/checkbox_unchecked.png"
    "assets/dark/checkbox/checkbox_unchecked@2x.png"
    "assets/dark/checkbox/checkbox_unchecked_focus.png"
    "assets/dark/checkbox/checkbox_unchecked_focus@2x.png"
    "assets/dark/checkbox/checkbox_unchecked_hover.png"
    "assets/dark/checkbox/checkbox_unchecked_hover@2x.png"
    "assets/dark/checkbox/checkbox_unchecked_insensitive.png"
    "assets/dark/checkbox/checkbox_unchecked_insensitive@2x.png"
    "assets/dark/checkbox/checkbox_unchecked_press.png"
    "assets/dark/checkbox/checkbox_unchecked_press@2x.png"
    "assets/dark/checkbox/radio_checked.png"
    "assets/dark/checkbox/radio_checked@2x.png"
    "assets/dark/checkbox/radio_checked_focus.png"
    "assets/dark/checkbox/radio_checked_focus@2x.png"
    "assets/dark/checkbox/radio_checked_hover.png"
    "assets/dark/checkbox/radio_checked_hover@2x.png"
    "assets/dark/checkbox/radio_checked_insensitive.png"
    "assets/dark/checkbox/radio_checked_insensitive@2x.png"
    "assets/dark/checkbox/radio_checked_press.png"
    "assets/dark/checkbox/radio_checked_press@2x.png"
    "assets/dark/checkbox/radio_mixed.png"
    "assets/dark/checkbox/radio_mixed@2x.png"
    "assets/dark/checkbox/radio_mixed_focus.png"
    "assets/dark/checkbox/radio_mixed_focus@2x.png"
    "assets/dark/checkbox/radio_mixed_hover.png"
    "assets/dark/checkbox/radio_mixed_hover@2x.png"
    "assets/dark/checkbox/radio_mixed_insensitive.png"
    "assets/dark/checkbox/radio_mixed_insensitive@2x.png"
    "assets/dark/checkbox/radio_mixed_press.png"
    "assets/dark/checkbox/radio_mixed_press@2x.png"
    "assets/dark/checkbox/radio_unchecked.png"
    "assets/dark/checkbox/radio_unchecked@2x.png"
    "assets/dark/checkbox/radio_unchecked_focus.png"
    "assets/dark/checkbox/radio_unchecked_focus@2x.png"
    "assets/dark/checkbox/radio_unchecked_hover_dark.png"
    "assets/dark/checkbox/radio_unchecked_hover_dark@2x.png"
    "assets/dark/checkbox/radio_unchecked_insensitive.png"
    "assets/dark/checkbox/radio_unchecked_insensitive@2x.png"
    "assets/dark/checkbox/radio_unchecked_press_dark.png"
    "assets/dark/checkbox/radio_unchecked_press_dark@2x.png"
    "assets/dark/header_arrow_down.svg"
    "assets/dark/header_arrow_up.svg"
    "assets/dark/input/input_clear_hover.svg"
    "assets/dark/input/input_clear_normal.svg"
    "assets/dark/input/input_clear_press.svg"
    "assets/dark/slider/slider_handle_focus.svg"
    "assets/dark/slider/slider_handle_insensitive.svg"
    "assets/dark/slider/slider_handle_normal.svg"
    "assets/dark/slider/slider_handle_press.svg"
    "assets/dark/slider/slider_point_handle.png"
    "assets/dark/slider/slider_point_handle@2x.png"
    "assets/dark/slider/slider_point_handle_focus.png"
    "assets/dark/slider/slider_point_handle_focus@2x.png"
    "assets/dark/slider/slider_point_handle_insensitive.png"
    "assets/dark/slider/slider_point_handle_insensitive@2x.png"
    "assets/dark/slider/slider_point_handle_press.png"
    "assets/dark/slider/slider_point_handle_press@2x.png"
    "assets/dark/spinbox/spinbutton_down_hover.png"
    "assets/dark/spinbox/spinbutton_down_insensitive.png"
    "assets/dark/spinbox/spinbutton_down_normal.png"
    "assets/dark/spinbox/spinbutton_down_press.png"
    "assets/dark/spinbox/spinbutton_minus_hover.png"
    "assets/dark/spinbox/spinbutton_minus_insensitive.png"
    "assets/dark/spinbox/spinbutton_minus_normal.png"
    "assets/dark/spinbox/spinbutton_minus_press.png"
    "assets/dark/spinbox/spinbutton_plus_hover.png"
    "assets/dark/spinbox/spinbutton_plus_insensitive.png"
    "assets/dark/spinbox/spinbutton_plus_normal.png"
    "assets/dark/spinbox/spinbutton_plus_press.png"
    "assets/dark/spinbox/spinbutton_up_hover.png"
    "assets/dark/spinbox/spinbutton_up_insensitive.png"
    "assets/dark/spinbox/spinbutton_up_normal.png"
    "assets/dark/spinbox/spinbutton_up_press.png"
    "assets/dark/tabbar/add_hover.svg"
    "assets/dark/tabbar/add_normal.svg"
    "assets/dark/tabbar/add_press.svg"
    "assets/dark/tabbar/pagedown_hover.svg"
    "assets/dark/tabbar/pagedown_insensitive.svg"
    "assets/dark/tabbar/pagedown_normal.svg"
    "assets/dark/tabbar/pagedown_press.svg"
    "assets/dark/tabbar/pageup_hover.svg"
    "assets/dark/tabbar/pageup_insensitive.svg"
    "assets/dark/tabbar/pageup_normal.svg"
    "assets/dark/tabbar/pageup_press.svg"
    "assets/dark/tabbar/tab_close_hover.svg"
    "assets/dark/tabbar/tab_close_normal.svg"
    "assets/dark/tabbar/tab_close_press.svg"
)

qt_add_resources(dstyleplugin "assets_dark"
    PREFIX
        "/"
    FILES
        ${assets_dark_resource_files}
)
set(assets_semidark_resource_files
    "assets/semidark/check_disabled.png"
    "assets/semidark/check_normal.png"
    "assets/semidark/check_selected.png"
    "assets/semidark/checkbox/checkbox_checked.png"
    "assets/semidark/checkbox/checkbox_checked@2x.png"
    "assets/semidark/checkbox/checkbox_checked_focus.png"
    "assets/semidark/checkbox/checkbox_checked_focus@2x.png"
    "assets/semidark/checkbox/checkbox_checked_hover.png"
    "assets/semidark/checkbox/checkbox_checked_hover@2x.png"
    "assets/semidark/checkbox/checkbox_checked_insensitive.png"
    "assets/semidark/checkbox/checkbox_checked_insensitive@2x.png"
    "assets/semidark/checkbox/checkbox_checked_press.png"
    "assets/semidark/checkbox/checkbox_checked_press@2x.png"
    "assets/semidark/checkbox/checkbox_mixed.png"
    "assets/semidark/checkbox/checkbox_mixed@2x.png"
    "assets/semidark/checkbox/checkbox_mixed_focus.png"
    "assets/semidark/checkbox/checkbox_mixed_focus@2x.png"
    "assets/semidark/checkbox/checkbox_mixed_hover.png"
    "assets/semidark/checkbox/checkbox_mixed_hover@2x.png"
    "assets/semidark/checkbox/checkbox_mixed_insensitive.png"
    "assets/semidark/checkbox/checkbox_mixed_insensitive@2x.png"
    "assets/semidark/checkbox/checkbox_mixed_press.png"
    "assets/semidark/checkbox/checkbox_mixed_press@2x.png"
    "assets/semidark/checkbox/checkbox_unchecked.png"
    "assets/semidark/checkbox/checkbox_unchecked@2x.png"
    "assets/semidark/checkbox/checkbox_unchecked_focus.png"
    "assets/semidark/checkbox/checkbox_unchecked_focus@2x.png"
    "assets/semidark/checkbox/checkbox_unchecked_hover.png"
    "assets/semidark/checkbox/checkbox_unchecked_hover@2x.png"
    "assets/semidark/checkbox/checkbox_unchecked_insensitive.png"
    "assets/semidark/checkbox/checkbox_unchecked_insensitive@2x.png"
    "assets/semidark/checkbox/checkbox_unchecked_press.png"
    "assets/semidark/checkbox/checkbox_unchecked_press@2x.png"
    "assets/semidark/checkbox/radio_checked.png"
    "assets/semidark/checkbox/radio_checked@2x.png"
    "assets/semidark/checkbox/radio_checked_focus.png"
    "assets/semidark/checkbox/radio_checked_focus@2x.png"
    "assets/semidark/checkbox/radio_checked_hover.png"
    "assets/semidark/checkbox/radio_checked_hover@2x.png"
    "assets/semidark/checkbox/radio_checked_insensitive.png"
    "assets/semidark/checkbox/radio_checked_insensitive@2x.png"
    "assets/semidark/checkbox/radio_checked_press.png"
    "assets/semidark/checkbox/radio_checked_press@2x.png"
    "assets/semidark/checkbox/radio_mixed.png"
    "assets/semidark/checkbox/radio_mixed@2x.png"
    "assets/semidark/checkbox/radio_mixed_focus.png"
    "assets/semidark/checkbox/radio_mixed_focus@2x.png"
    "assets/semidark/checkbox/radio_mixed_hover.png"
    "assets/semidark/checkbox/radio_mixed_hover@2x.png"
    "assets/semidark/checkbox/radio_mixed_insensitive.png"
    "assets/semidark/checkbox/radio_mixed_insensitive@2x.png"
    "assets/semidark/checkbox/radio_mixed_press.png"
    "assets/semidark/checkbox/radio_mixed_press@2x.png"
    "assets/semidark/checkbox/radio_unchecked.png"
    "assets/semidark/checkbox/radio_unchecked@2x.png"
    "assets/semidark/checkbox/radio_unchecked_focus.png"
    "assets/semidark/checkbox/radio_unchecked_focus@2x.png"
    "assets/semidark/checkbox/radio_unchecked_hover_dark.png"
    "assets/semidark/checkbox/radio_unchecked_hover_dark@2x.png"
    "assets/semidark/checkbox/radio_unchecked_insensitive.png"
    "assets/semidark/checkbox/radio_unchecked_insensitive@2x.png"
    "assets/semidark/checkbox/radio_unchecked_press_dark.png"
    "assets/semidark/checkbox/radio_unchecked_press_dark@2x.png"
    "assets/semidark/header_arrow_down.png"
    "assets/semidark/header_arrow_up.png"
    "assets/semidark/slider/slider_handle_focus.svg"
    "assets/semidark/slider/slider_handle_insensitive.svg"
    "assets/semidark/slider/slider_handle_normal.svg"
    "assets/semidark/slider/slider_handle_press.svg"
    "assets/semidark/slider/slider_point_handle.png"
    "assets/semidark/slider/slider_point_handle@2x.png"
    "assets/semidark/slider/slider_point_handle_focus.png"
    "assets/semidark/slider/slider_point_handle_focus@2x.png"
    "assets/semidark/slider/slider_point_handle_insensitive.png"
    "assets/semidark/slider/slider_point_handle_insensitive@2x.png"
    "assets/semidark/slider/slider_point_handle_press.png"
    "assets/semidark/slider/slider_point_handle_press@2x.png"
)

qt_add_resources(dstyleplugin "assets_semidark"
    PREFIX
        "/"
    FILES
        ${assets_semidark_resource_files}
)
set(assets_semilight_resource_files
    "assets/semilight/arrow-right_disabled.png"
    "assets/semilight/arrow-right_normal.png"
    "assets/semilight/arrow-right_selected.png"
    "assets/semilight/check_disabled.png"
    "assets/semilight/check_normal.png"
    "assets/semilight/check_selected.png"
    "assets/semilight/checkbox/checkbox_checked.png"
    "assets/semilight/checkbox/checkbox_checked@2x.png"
    "assets/semilight/checkbox/checkbox_checked_focus.png"
    "assets/semilight/checkbox/checkbox_checked_focus@2x.png"
    "assets/semilight/checkbox/checkbox_checked_hover.png"
    "assets/semilight/checkbox/checkbox_checked_hover@2x.png"
    "assets/semilight/checkbox/checkbox_checked_insensitive.png"
    "assets/semilight/checkbox/checkbox_checked_insensitive@2x.png"
    "assets/semilight/checkbox/checkbox_checked_press.png"
    "assets/semilight/checkbox/checkbox_checked_press@2x.png"
    "assets/semilight/checkbox/checkbox_mixed.png"
    "assets/semilight/checkbox/checkbox_mixed@2x.png"
    "assets/semilight/checkbox/checkbox_mixed_focus.png"
    "assets/semilight/checkbox/checkbox_mixed_focus@2x.png"
    "assets/semilight/checkbox/checkbox_mixed_hover.png"
    "assets/semilight/checkbox/checkbox_mixed_hover@2x.png"
    "assets/semilight/checkbox/checkbox_mixed_insensitive.png"
    "assets/semilight/checkbox/checkbox_mixed_insensitive@2x.png"
    "assets/semilight/checkbox/checkbox_mixed_press.png"
    "assets/semilight/checkbox/checkbox_mixed_press@2x.png"
    "assets/semilight/checkbox/checkbox_unchecked.png"
    "assets/semilight/checkbox/checkbox_unchecked@2x.png"
    "assets/semilight/checkbox/checkbox_unchecked_focus.png"
    "assets/semilight/checkbox/checkbox_unchecked_focus@2x.png"
    "assets/semilight/checkbox/checkbox_unchecked_hover.png"
    "assets/semilight/checkbox/checkbox_unchecked_hover@2x.png"
    "assets/semilight/checkbox/checkbox_unchecked_insensitive.png"
    "assets/semilight/checkbox/checkbox_unchecked_insensitive@2x.png"
    "assets/semilight/checkbox/checkbox_unchecked_press.png"
    "assets/semilight/checkbox/checkbox_unchecked_press@2x.png"
    "assets/semilight/checkbox/radio_checked.png"
    "assets/semilight/checkbox/radio_checked@2x.png"
    "assets/semilight/checkbox/radio_checked_focus.png"
    "assets/semilight/checkbox/radio_checked_focus@2x.png"
    "assets/semilight/checkbox/radio_checked_hover.png"
    "assets/semilight/checkbox/radio_checked_hover@2x.png"
    "assets/semilight/checkbox/radio_checked_insensitive.png"
    "assets/semilight/checkbox/radio_checked_insensitive@2x.png"
    "assets/semilight/checkbox/radio_checked_press.png"
    "assets/semilight/checkbox/radio_checked_press@2x.png"
    "assets/semilight/checkbox/radio_mixed.png"
    "assets/semilight/checkbox/radio_mixed@2x.png"
    "assets/semilight/checkbox/radio_mixed_focus.png"
    "assets/semilight/checkbox/radio_mixed_focus@2x.png"
    "assets/semilight/checkbox/radio_mixed_hover.png"
    "assets/semilight/checkbox/radio_mixed_hover@2x.png"
    "assets/semilight/checkbox/radio_mixed_insensitive.png"
    "assets/semilight/checkbox/radio_mixed_insensitive@2x.png"
    "assets/semilight/checkbox/radio_mixed_press.png"
    "assets/semilight/checkbox/radio_mixed_press@2x.png"
    "assets/semilight/checkbox/radio_unchecked.png"
    "assets/semilight/checkbox/radio_unchecked@2x.png"
    "assets/semilight/checkbox/radio_unchecked_focus.png"
    "assets/semilight/checkbox/radio_unchecked_focus@2x.png"
    "assets/semilight/checkbox/radio_unchecked_hover.png"
    "assets/semilight/checkbox/radio_unchecked_hover@2x.png"
    "assets/semilight/checkbox/radio_unchecked_insensitive.png"
    "assets/semilight/checkbox/radio_unchecked_insensitive@2x.png"
    "assets/semilight/checkbox/radio_unchecked_press.png"
    "assets/semilight/checkbox/radio_unchecked_press@2x.png"
    "assets/semilight/header_arrow_down.png"
    "assets/semilight/header_arrow_up.png"
    "assets/semilight/slider/slider_handle_focus.svg"
    "assets/semilight/slider/slider_handle_insensitive.svg"
    "assets/semilight/slider/slider_handle_normal.svg"
    "assets/semilight/slider/slider_handle_press.svg"
    "assets/semilight/slider/slider_point_handle.png"
    "assets/semilight/slider/slider_point_handle@2x.png"
    "assets/semilight/slider/slider_point_handle_focus.png"
    "assets/semilight/slider/slider_point_handle_focus@2x.png"
    "assets/semilight/slider/slider_point_handle_insensitive.png"
    "assets/semilight/slider/slider_point_handle_insensitive@2x.png"
    "assets/semilight/slider/slider_point_handle_press.png"
    "assets/semilight/slider/slider_point_handle_press@2x.png"
)

qt_add_resources(dstyleplugin "assets_semilight"
    PREFIX
        "/"
    FILES
        ${assets_semilight_resource_files}
)
set(assets_resource_files
    "assets/icons/arrow-down.png"
    "assets/icons/arrow-left.png"
    "assets/icons/arrow-right.png"
    "assets/icons/arrow-up.png"
    "assets/icons/button-cancel.png"
    "assets/icons/computer.svg"
    "assets/icons/dialog-apply.png"
    "assets/icons/document-save.png"
    "assets/icons/drive-harddisk.png"
    "assets/icons/emblem-symbolic-link.png"
    "assets/icons/folder-open.svg"
    "assets/icons/folder.svg"
    "assets/icons/help-faq.png"
    "assets/icons/media-optical.png"
    "assets/icons/process-stop.png"
    "assets/icons/text-x-generic.svg"
    "assets/icons/user-home.svg"
    "assets/icons/user-trash.svg"
    "assets/icons/view-refresh.png"
    "assets/icons/window_close_hover_dark.png"
    "assets/icons/window_close_hover_light.png"
    "assets/icons/window_close_normal_dark.png"
    "assets/icons/window_close_normal_light.png"
    "assets/icons/window_close_press_dark.png"
    "assets/icons/window_close_press_light.png"
    "assets/icons/window_max_hover_dark.png"
    "assets/icons/window_max_hover_light.png"
    "assets/icons/window_max_normal_dark.png"
    "assets/icons/window_max_normal_light.png"
    "assets/icons/window_max_press_dark.png"
    "assets/icons/window_max_press_light.png"
    "assets/icons/window_min_hover_dark.png"
    "assets/icons/window_min_hover_light.png"
    "assets/icons/window_min_normal_dark.png"
    "assets/icons/window_min_normal_light.png"
    "assets/icons/window_min_press_dark.png"
    "assets/icons/window_min_press_light.png"
    "assets/icons/window_option_hover_dark.png"
    "assets/icons/window_option_hover_light.png"
    "assets/icons/window_option_normal_dark.png"
    "assets/icons/window_option_normal_light.png"
    "assets/icons/window_option_press_dark.png"
    "assets/icons/window_option_press_light.png"
    "assets/icons/window_unmax_hover_dark.png"
    "assets/icons/window_unmax_hover_light.png"
    "assets/icons/window_unmax_normal_dark.png"
    "assets/icons/window_unmax_normal_light.png"
    "assets/icons/window_unmax_press_dark.png"
    "assets/icons/window_unmax_press_light.png"
)

qt_add_resources(dstyleplugin "assets"
    PREFIX
        "/"
    FILES
        ${assets_resource_files}
)

if(qtCompileTest(dtkwidget_ss_{DTK_VERSION}))
    target_compile_definitions(dstyleplugin PRIVATE
        DTK_SUPPORT_BLUR_WINDOW
    )
endif()

install(TARGETS dstyleplugin
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
